test/libsolidity/syntaxTests/nameAndTypeResolution/344_one_divided_by_three_integer_conversion.sol
contract test {
    function f() public {
        uint a = 1/3;
    }
}
// ----
// TypeError: (50-62): Type rational_const 1 / 3 is not implicitly convertible to expected type uint256.
